--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@ section{height: 100vh;}
                     <img src="img/dan-page-3.jpg" alt="">
                     <img src="img/dan-page-4.jpg" alt="">
                     <img src="img/dan-page-5.jpg" alt="">
-                    <a href="pro2/index.html"><div class="page">웹 페이지 바로가기</div></a>
+                   <div> <a class="page" href="pro2/index.html" target="_blank">웹 페이지 바로가기</a></div>
                     
                 </div>  
             </div>
