--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ section{height: 100vh;}
     .modal-body p{font-weight: 500;}
     .modal .close{font-size: 24px;}
     .modal h3 {font-size: 20px; padding: 20px 0;}
-    .modal-body p{font-size: 14px;}
+    .modal-body p{font-size: 14px; text-align: left; }
 }
 
 
